# benefits

./: .coveragerc  .devcontainer.json  .dockerignore  .env.sample  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyup.yml  404.html  Dockerfile  Dockerfile.dev  LICENSE  README.md  azure-pipelines.yml  compose.yml  data.json  docker-compose.dev.yml  docker-compose.yml  enrollment-events.ipynb  index.html  manage.py  mkdocs.yml  nginx.conf  package-lock.json  package.json  pylock.toml  pyproject.toml  requirements.in  requirements.txt  run_playwright.sh  setup  sitemap.xml  terraformpipeline.yml  test_example.py
.aws/: ecs-task-definition.json  ecs-task.json  set-env.sh
.devcontainer/: .env.sample  Dockerfile  compose.yml  devcontainer.json  postAttach.sh  requirements.txt
.devcontainer/server/: .env.server  data.csv  settings.py
.github/: CODEOWNERS  dependabot.yml  lighthouserc.json
.github/ISSUE_TEMPLATE/: bug-report.md  deliverable.md  design.md  epic-decision-record.md  incident-response.md  incident.yml  release.yml  task.md  user-story.md
.github/workflows/: add-to-project-dependabot.yml  add-to-project-issues.yml  agency-onboarding.yml  auto-assigner.yml  check-api.yml  check-dynamic-version.py  check-dynamic-version.yml  check-makemigrations.yml  check-metadata.py  check-metadata.yml  check-migrations-and-messages.yml  codeql-ignore.yml  codeql.yml  deploy-dev.yml  deploy-ecs.yml  deploy-prod.yml  deploy-test.yml  deploy.yml  ecs-deploy-dev.yml  ecs-deploy-prod.yml  ecs-deploy-test.yml  ecs-deploy.yml  fixture-update-reminder.yml  grype.yml  labeler-actions.yml  labeler-back-end.yml  labeler-dependencies.yml  labeler-deploy-dev.yml  labeler-deploy.yml  labeler-docker.yml  labeler-docs.yml  labeler-front-end.yml  labeler-i18n.yml  labeler-infrastructure.yml  labeler-migrations.yml  labeler-tests.yml  lint.yml  mkdocs.yml  pre-commit.yml  terraform-plan.yml  (+5 more)
appcontainer/: Dockerfile  gunicorn.conf.py  nginx.conf  proxy.conf  requirements.txt
benefits/: __init__.py  admin.py  apps.py  logging.py  routes.py  secrets.py  sentry.py  settings.py  superuser.py  urls.py  views.py  wsgi.py
benefits/auth/: __init__.py  urls.py  views.py
benefits/authn/: __init__.py  backend.py  models.py  urls.py  views.py
benefits/cli/: apps.py  commands.py  main.py
benefits/core/: __init__.py  admin.py  analytics.py  api.py  apps.py  context.py  context_processors.py  forms.py  middleware.py  mixins.py  models.py  pageviews.py  recaptcha.py  session.py  translation.py  urls.py  viewmodels.py  views.py  widgets.py
benefits/discounts/: __init__.py  api.py  forms.py  urls.py  views.py
benefits/eligibility/: __init__.py  analytics.py  api.py  apps.py  forms.py  urls.py  verify.py  views.py
benefits/enrollment/: __init__.py  analytics.py  api.py  apps.py  enrollment.py  expiration.py  forms.py  littlepay.py  middleware.py  switchio.py  urls.py  views.py
benefits/enrollment_littlepay/: admin.py  apps.py  enrollment.py  models.py  session.py  urls.py  views.py
benefits/enrollment_switchio/: admin.py  api.py  apps.py  enrollment.py  models.py  registration.py  session.py  test.py  urls.py  views.py
benefits/in_person/: apps.py  context.py  forms.py  mixins.py  urls.py  views.py
benefits/locale/: README.md
benefits/oauth/: __init__.py  analytics.py  apps.py  (+6 more)
configuration/: index.html
data/: client.json  server.json
deployment/: index.html
development/: index.html
docs/: .pages  CNAME  README.md  deployment.md  index.md  mkdocs.yml  requirements.txt
eligibility_verification/: settings.py  urls.py  wsgi.py
enrollment-pathways/: index.html
fixtures/: 00_eligibilitytype.json  02_authprovider.json  02_eligibilityverifier.json  03_eligibilityverifier.json  04_transitagency.json  05_i18ntext.json  05_transitagency.json  06_icon.json  07_image.json  08_mediaitem.json  09_pagenavigation.json  10_page.json  core.eligibilityverifier.json  core.paymentprocessor.json  core.pemdata.json  core.transitagency.json
getting-started/: index.html
htmlcov/: class_index.html  d_5351a2d360ecd143_analytics_py.html  d_5351a2d360ecd143_api_py.html  d_5351a2d360ecd143_apps_py.html  d_5351a2d360ecd143_forms_py.html  d_5351a2d360ecd143_urls_py.html  d_5351a2d360ecd143_views_py.html  d_7435199c01eb52ab_analytics_py.html  d_7435199c01eb52ab_apps_py.html  d_7435199c01eb52ab_client_py.html  d_7435199c01eb52ab_middleware_py.html  d_7435199c01eb52ab_redirects_py.html  d_7435199c01eb52ab_urls_py.html  d_7435199c01eb52ab_views_py.html  d_795c8c28b74e7b9e___init___py.html  d_795c8c28b74e7b9e_secrets_py.html  d_795c8c28b74e7b9e_sentry_py.html  d_795c8c28b74e7b9e_settings_py.html  d_795c8c28b74e7b9e_urls_py.html  d_795c8c28b74e7b9e_wsgi_py.html  d_8c0b35f1ea7ee6af_admin_py.html  d_8c0b35f1ea7ee6af_analytics_py.html  d_8c0b35f1ea7ee6af_apps_py.html  d_8c0b35f1ea7ee6af_context_processors_py.html  d_8c0b35f1ea7ee6af_middleware_py.html  d_8c0b35f1ea7ee6af_models_py.html  d_8c0b35f1ea7ee6af_recaptcha_py.html  d_8c0b35f1ea7ee6af_session_py.html  d_8c0b35f1ea7ee6af_urls_py.html  d_8c0b35f1ea7ee6af_views_py.html  d_8c0b35f1ea7ee6af_widgets_py.html  d_d1111b74f8c04d3c_analytics_py.html  d_d1111b74f8c04d3c_apps_py.html  d_d1111b74f8c04d3c_forms_py.html  d_d1111b74f8c04d3c_urls_py.html  d_d1111b74f8c04d3c_verify_py.html  d_d1111b74f8c04d3c_views_py.html  function_index.html  index.html  status.json  (+103 more)
keys/: README.md
localhost/: .env.sample  Dockerfile.dev  README.md  docker-compose.yml
nginx/: default.conf  nginx.conf
playwright/: .env.sample  Dockerfile  run.sh  test_agencycard_flow.py  test_logingov_flow.py  test_medicaregov_flow.py
search/: search_index.json
server/: Dockerfile  app.py  requirements.txt
styles/: theme.css
terraform/: .gitignore  .terraform.lock.hcl  README.md  app_service.tf  azure-pipelines.yml  container_app.tf  database.tf  email.tf  environment.tf  init.sh  key_vault.tf  main.tf  modules.tf  monitor.tf  network.tf  output.tf  restart-app.sh  secrets.tf  storage.tf  terraform.tfvars.sample  uptime.tf  variables.tf
uploads/: .gitignore
(+1220 files in other folders)
