[project]
name = "benefits"
dynamic = ["version"]
description = "Cal-ITP Benefits is an application that enables automated eligibility verification and enrollment for transit benefits onto customers’ existing contactless bank (credit/debit) cards."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.9"
maintainers = [
  { name = "Compiler LLC", email = "dev@compiler.la" }
]
dependencies = [
    "Authlib==1.4.0",
    "azure-keyvault-secrets==4.9.0",
    "azure-identity==1.19.0",
    "Django==5.1.5",
    "django-csp==3.8",
    "django-admin-sortable2==2.2.4",
    "django-google-sso==8.0.0",
    "eligibility-api==2023.9.1",
    "calitp-littlepay==2024.10.1",
    "requests==2.32.3",
    "sentry-sdk==2.20.0",
    "six==1.17.0",
    "pillow==11.1.0",
    "django-multiselectfield==0.1.13",
]

[project.optional-dependencies]
dev = [
    "black",
    "djlint",
    "flake8",
    "pre-commit",
    "setuptools_scm>=8"
]
test = [
    "coverage",
    "pytest",
    "pytest-django",
    "pytest-mock",
    "pytest-socket",
]

[project.urls]
Changelog = "https://github.com/cal-itp/benefits/releases"
Code = "https://github.com/cal-itp/benefits"
Documentation = "https://docs.calitp.org/benefits"
Homepage = "https://www.calitp.org/#initiatives-benefits"
Issues = "https://github.com/cal-itp/benefits/issues"

[build-system]
requires = ["setuptools>=65", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "benefits/core/migrations/*"
]
source = ["benefits"]

[tool.djlint]
ignore = "H017,H031"
indent = 2
max_attribute_length = 127
max_line_length = 127
profile = "django"
preserve_blank_lines = true
use_gitignore = true

[tool.pyright]
include = ["benefits", "tests/pytest"]
typeCheckingMode = "off"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "benefits.settings"
markers = [
    "request_path: use with session_request to initialize with the given path",
]

[tool.setuptools.packages.find]
include = ["benefits*"]
namespaces = false

[tool.setuptools_scm]
# intentionally left blank, but we need the section header to activate the tool
